--- a/SeriousGameEngine/packages.config
+++ b/SeriousGameEngine/packages.config
@@ -4,6 +4,7 @@
   <package id="Microsoft.Bcl.AsyncInterfaces" version="6.0.0" targetFramework="net472" />
   <package id="Microsoft.CSharp" version="4.7.0" targetFramework="net472" />
   <package id="Microsoft.Xaml.Behaviors.Wpf" version="1.1.39" targetFramework="net472" />
+  <package id="Newtonsoft.Json" version="13.0.1" targetFramework="net472" />
   <package id="protobuf-net" version="3.1.17" targetFramework="net472" />
   <package id="protobuf-net.Core" version="3.1.17" targetFramework="net472" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
