--- a/SeriousGameEngine/SeriousGameEngine.csproj
+++ b/SeriousGameEngine/SeriousGameEngine.csproj
@@ -54,11 +54,11 @@
     </Reference>
     <Reference Include="SGGE, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\SGGE_Rike_Version\SGGE\SGGE\SGGE\bin\Release\netstandard2.0\SGGE.dll</HintPath>
+      <HintPath>..\..\SGGE_Rike_Version\SGGE_Rike_Version\SGGE\SGGE\SGGE\bin\Release\netstandard2.0\SGGE.dll</HintPath>
     </Reference>
     <Reference Include="SGGE_Runtime, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\SGGE_Rike_Version\SGGE\SGGE\SGGE_Runtime\bin\Release\netstandard2.0\SGGE_Runtime.dll</HintPath>
+      <HintPath>..\..\SGGE_Rike_Version\SGGE_Rike_Version\SGGE\SGGE\SGGE_Runtime\bin\Release\netstandard2.0\SGGE_Runtime.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Buffers, Version=4.0.3.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
@@ -180,7 +180,7 @@
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
     </None>
     <None Include="Resource\SGGEoptions.sgge">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
   </ItemGroup>
   <ItemGroup>
