--- a/SeriousGameEngine/SeriousGameEngine.csproj
+++ b/SeriousGameEngine/SeriousGameEngine.csproj
@@ -56,8 +56,7 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\SGGE_Rike_Version\SGGE_Rike_Version\SGGE\SGGE\SGGE\bin\Release\netstandard2.0\SGGE.dll</HintPath>
     </Reference>
-    <Reference Include="SGGE_Runtime, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
+    <Reference Include="SGGE_Runtime">
       <HintPath>..\..\SGGE_Rike_Version\SGGE_Rike_Version\SGGE\SGGE\SGGE_Runtime\bin\Release\netstandard2.0\SGGE_Runtime.dll</HintPath>
     </Reference>
     <Reference Include="System" />
@@ -177,6 +176,7 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+    <None Include="ClassDiagram.cd" />
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
